--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,6 @@
+orbs:
+  terraform: circleci/terraform@3.1.0
+
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
@@ -24,3 +27,15 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+
+jobs:
+  example-job:
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
+    steps:
+      - terraform/init
+workflows:
+  example-workflow:
+    jobs:
+      - example-job
